--- a/php-blog/view/front/index.html
+++ b/php-blog/view/front/index.html
@@ -60,7 +60,7 @@
 								<span class="icon icon-arrow-right"></span>
 							</h5>
 						</a>
-            <div class="sub-t mt1">摘要: <?php echo $v['subtitle']; ?></div>
+            <div class="sub-t mt1"><b>摘要:</b> <?php echo $v['subtitle']; ?></div>
 						<div class="article-list-footer mt2">
 							<span class="article-list-date" title="<?php echo date('Y-m-d H:i:s',$v['pubtime']); ?>">
 								<?php echo date('Y-m-d',$v['pubtime']); ?>
