--- a/php-blog/view/front/art.html
+++ b/php-blog/view/front/art.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<title>my blog</title>
+	<title>Article</title>
 	<!-- <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 	<link rel="stylesheet" href="./assets/css/light.css">
 	<link rel="stylesheet/less" href="./assets/css/style.less">
